# bfore

./: .gitignore  .gitmodules  Makefile  README.rst
docs/: requirements.txt
docs/source/: ads_refs.tsv  conf.py  index.rst
examples/: build_star.toml  color_star.toml  data  pulse_star.toml  render_and_stream_mesh.toml  render_mesh.toml  stream_mesh.toml  stream_rbuff.toml  stream_renderbuff.toml
python/: pyproject.toml
python/src/bfore/: __init__.py
src/common/: file_m.fypp  math_m.fypp  propmap_m.fypp  stat_m.fypp  string_m.fypp
src/framebuffer/: framebuffer_construct_sm.fypp  framebuffer_io_sm.fypp  framebuffer_m.fypp  framebuffer_pixel_sm.fypp  framebuffer_render_sm.fypp  utest_framebuffer.fypp
src/frontend/: build_star.fypp  color_star.fypp  pulse_star.fypp  render_and_stream_mesh.fypp  render_mesh.fypp  render_star.fypp  star_common_m.fypp  stream_mesh.fypp  stream_rbuff.fypp  stream_renderbuff.fypp
src/geo_mesh/: .#geo_mesh_construct_sm.fypp  geo_mesh_construct_sm.fypp  geo_mesh_io_sm.fypp  geo_mesh_m.fypp  geo_mesh_modify_sm.fypp  geo_mesh_primitives_sm.fypp  utest_geo_mesh.fypp
src/include/: utest.inc
src/map/: map_construct_sm.fypp  map_io_sm.fypp  map_m.fypp  map_pixel_sm.fypp  map_render_sm.fypp  utest_map.fypp
src/math/: special_m.fypp
src/mesh/: mesh_build_sm.fypp  mesh_connect_sm.fypp  mesh_construct_sm.fypp  mesh_face_sm.fypp  mesh_geometry_sm.fypp  mesh_io_sm.fypp  mesh_m.fypp  mesh_modify_sm.fypp  mesh_operate_sm.fypp  mesh_primitives_m.fypp  mesh_topology_sm.fypp  mesh_traverse_sm.fypp  mesh_utils_m.fypp  mesh_vert_sm.fypp  (+1 more)
(+57 files in other folders)
